--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <button class="tecla tecla_psh">bell</button>
         <button class="tecla tecla_tic">boom</button>
-        <button class="tecla tecla_tom">TIK</button>
+        <button class="tecla tecla_tom">Mewing</button>
     </section>
 
     <audio src="sounds/200-asian-jeff-made-with-Voicemod.mp3" id="som_tecla_pom"></audio>
@@ -42,7 +42,7 @@
     <audio src="sounds/Clash Royale Starting Game Sound Effect.mp3" id="som_tecla_toim"></audio>
     <audio src="sounds/taco-bell-sound.mp3" id="som_tecla_psh"></audio>
     <audio src="sounds/Vine-boom-sound-effect.mp3" id="som_tecla_tic"></audio>
-    <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio>
+    <audio src="sounds/bye-bye-mewing_fMVssQz.mp3" id="som_tecla_tom"></audio>
 
     <script src="main.js"></script>
 </body>
