--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
     <h1>SoundPad</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_pom">200</button>
-        <button class="tecla tecla_clap">boxed</button>
+        <button class="tecla tecla_pom">Yes</button>
+        <button class="tecla tecla_clap">wrong</button>
         <button class="tecla tecla_tim">holy-moly</button>
 
         <button class="tecla tecla_puff">huh?</button>
         <button class="tecla tecla_splash">Rizz</button>
-        <button class="tecla tecla_toim">clash</button>
+        <button class="tecla tecla_toim">Wrong</button>
 
         <button class="tecla tecla_psh">bell</button>
         <button class="tecla tecla_tic">boom</button>
         <button class="tecla tecla_tom">Mewing</button>
     </section>
 
-    <audio src="sounds/200-asian-jeff-made-with-Voicemod.mp3" id="som_tecla_pom"></audio>
+    <audio src="sounds/Correct-ding-sound-effect.mp3" id="som_tecla_pom"></audio>
     <audio src="sounds/full-box-asian-jeff.mp3" id="som_tecla_clap"></audio>
     <audio src="sounds/Holeh Moleh.mp3" id="som_tecla_tim"></audio>
     <audio src="sounds/Huh sound effect.mp3" id="som_tecla_puff"></audio>
     <audio src="sounds/Rizz-sound-effect.mp3" id="som_tecla_splash"></audio>
-    <audio src="sounds/Clash Royale Starting Game Sound Effect.mp3" id="som_tecla_toim"></audio>
+    <audio src="sounds/incorrect-game-show-host-david-h-m-lambert-1-00-00.mp3" id="som_tecla_toim"></audio>
     <audio src="sounds/taco-bell-sound.mp3" id="som_tecla_psh"></audio>
     <audio src="sounds/Vine-boom-sound-effect.mp3" id="som_tecla_tic"></audio>
     <audio src="sounds/bye-bye-mewing_fMVssQz.mp3" id="som_tecla_tom"></audio>
