--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <section class="teclado">
         <button class="tecla tecla_pom">Yes</button>
-        <button class="tecla tecla_clap">wrong</button>
+        <button class="tecla tecla_clap">womp</button>
         <button class="tecla tecla_tim">holy-moly</button>
 
         <button class="tecla tecla_puff">huh?</button>
