--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
 
     <audio src="sounds/Correct-ding-sound-effect.mp3" id="som_tecla_pom"></audio>
-    <audio src="sounds/full-box-asian-jeff.mp3" id="som_tecla_clap"></audio>
+    <audio src="sounds/womp-womp.mp3" id="som_tecla_clap"></audio>
     <audio src="sounds/Holeh Moleh.mp3" id="som_tecla_tim"></audio>
     <audio src="sounds/Huh sound effect.mp3" id="som_tecla_puff"></audio>
     <audio src="sounds/Rizz-sound-effect.mp3" id="som_tecla_splash"></audio>
