--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button class="tecla tecla_tim">holy-moly</button>
 
         <button class="tecla tecla_puff">huh?</button>
-        <button class="tecla tecla_splash">Rizz</button>
+        <button class="tecla tecla_splash">Yes2</button>
         <button class="tecla tecla_toim">Wrong</button>
 
         <button class="tecla tecla_psh">bell</button>
@@ -38,7 +38,7 @@
     <audio src="sounds/womp-womp.mp3" id="som_tecla_clap"></audio>
     <audio src="sounds/Holeh Moleh.mp3" id="som_tecla_tim"></audio>
     <audio src="sounds/Huh sound effect.mp3" id="som_tecla_puff"></audio>
-    <audio src="sounds/Rizz-sound-effect.mp3" id="som_tecla_splash"></audio>
+    <audio src="sounds/Voicy_Gorilla Tag Game End Tag (1).mp3" id="som_tecla_splash"></audio>
     <audio src="sounds/incorrect-game-show-host-david-h-m-lambert-1-00-00.mp3" id="som_tecla_toim"></audio>
     <audio src="sounds/taco-bell-sound.mp3" id="som_tecla_psh"></audio>
     <audio src="sounds/Vine-boom-sound-effect.mp3" id="som_tecla_tic"></audio>
