--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-    <h1>SoundPad</h1>
+    <h1>SoundPad For Class!</h1>
 
     <section class="teclado">
         <button class="tecla tecla_pom">Yes</button>
